# aizen-todo

./: .gitignore  README.md  pyproject.toml  setup.py
aizen_todo/: __main__.py  actions.py  cli.py  config.py  data.py  ui.py
